modified:   .env.example 	modified:   .github/workflows/ci.yml 	modified:   Makefile 	modified:   README.md 	new file:   airflow/dags/ingest_eia_bulk.py 	new file:   airflow/dags/ingest_iso_metrics_aeso.py 	new file:   airflow/dags/ingest_iso_metrics_caiso.py 	new file:   airflow/dags/ingest_iso_metrics_miso.py 	new file:   airflow/dags/ingest_iso_metrics_spp.py 	modified:   airflow/dags/ingest_iso_prices_aeso.py 	modified:   airflow/dags/ingest_iso_prices_caiso.py 	modified:   airflow/dags/ingest_iso_prices_ercot.py 	modified:   airflow/dags/ingest_iso_prices_isone_spp.py 	modified:   airflow/dags/ingest_iso_prices_nyiso_miso.py 	modified:   airflow/dags/ingest_iso_prices_spp.py 	modified:   airflow/dags/ingest_public_feeds.py 	modified:   compose/README.md 	modified:   compose/docker-compose.dev.yml 	modified:   config/airflow_variables.json 	new file:   config/eia_bulk_datasets.json 	modified:   config/iso_nodes.csv 	new file:   dbt/tests/mart/test_mart_ppa_cashflow_not_null.sql 	new file:   dbt/tests/mart/test_mart_ppa_irr_consistency.sql 	new file:   dbt/tests/mart/test_mart_ppa_npv_not_null.sql 	modified:   docs/aurum-developer-documentation.md 	modified:   docs/ingestion/eia_dataset_config.md 	modified:   docs/k8s-dev.md 	modified:   ge/expectations/iso_lmp.json 	modified:   k8s/api/configmap.yaml 	modified:   k8s/api/helm/templates/deployment.yaml 	new file:   k8s/api/helm/templates/ingress.yaml 	modified:   k8s/api/helm/templates/service.yaml 	modified:   k8s/api/helm/templates/servicemonitor.yaml 	modified:   k8s/api/helm/values.yaml 	modified:   k8s/api/secret.yaml 	modified:   k8s/base/configmap-env.yaml 	modified:   k8s/base/vault-bootstrap.yaml 	modified:   k8s/dev/kustomization.yaml 	modified:   k8s/scenario-worker/helm/templates/deployment.yaml 	modified:   k8s/scenario-worker/helm/templates/service.yaml 	modified:   k8s/scenario-worker/helm/templates/servicemonitor.yaml 	modified:   k8s/scenario-worker/helm/values.yaml 	modified:   kafka/schemas/iso
